src/test/resources/semantic/reject/nonIntArrayIndex.ul
void main() {
}

void foo() {
    int[5] foo;
    foo[0.0];
}
